welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: not found: value i
	for (i<- 0 to nums(i)) {
                           ^