welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	for (i<- 0 to nums(i)) {
		if (i<=4) {
		if (nums(i)==9) {
			return true
		}
	}
}
}
